added tagging drawing